force-app/main/default/objects/Payments_TB__c/Payments_TB__c.object-meta.xml
<CustomObject>
    <label>Payment by Member</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Payments_TB Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments by Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>