force-app/main/default/objects/Payments_TB__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Payments by Members</relationshipLabel>
    <relationshipName>Payments_by_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>