force-app/main/default/objects/Payments_TB__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments by Members</relationshipLabel>
    <relationshipName>Payments_by_Members</relationshipName>
    <type>Lookup</type>
</CustomField>