force-app/main/default/objects/Payments_TB__c/validationRules/Amount_can_not_be_more_than_credits.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_can_not_be_more_than_credits</fullName>
    <active>true</active>
    <errorConditionFormula>(Amount__c &gt; Order__r.Available_Credits__c) &amp;&amp; (ISPICKVAL(Payment_Method__c, &quot;Organizational Credit&quot;))</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Amount can not be greater than the available credits</errorMessage>
</ValidationRule>