force-app/main/default/objects/Payments_TB__c/validationRules/Amount_cannot_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_cannot_be_negative</fullName>
    <active>true</active>
    <errorConditionFormula>( Amount__c &lt;= 0)</errorConditionFormula>
    <errorMessage>The amount cannot be less than zero</errorMessage>
</ValidationRule>