force-app/main/default/objects/Payments_TB__c/validationRules/Cannot_update_to_Organizational_Credit.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_update_to_Organizational_Credit</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE(Payment_Method__c),&quot;Organizational Credit&quot;)&amp;&amp; NOT(ISPICKVAL(Payment_Method__c,&quot;Organizational Credit&quot;))</errorConditionFormula>
    <errorMessage>Changing the Payment method to or from &quot;Organizational Credit&quot; must be completed by your System Administrator.  Please enter a case to have this adjusted.</errorMessage>
</ValidationRule>