force-app/main/default/objects/Payments_TB__c/validationRules/For_waiver_comments_are_mandate.validationRule-meta.xml
<ValidationRule>
    <fullName>For_waiver_comments_are_mandate</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL( Payment_Method__c , &quot;Waiver - External Sponsor&quot;)|| 
ISPICKVAL(Payment_Method__c , &quot;Waiver - Internal Promotion&quot;)||
ISPICKVAL(Payment_Method__c , &quot;Waiver - Forgiven&quot;)) &amp;&amp;   ISBLANK( Comment__c )</errorConditionFormula>
    <errorDisplayField>Comment__c</errorDisplayField>
    <errorMessage>Comments are mandate</errorMessage>
</ValidationRule>