force-app/main/default/objects/Payments_TB__c/validationRules/Payment_can_not_be_more_than_owed.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_can_not_be_more_than_owed</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW()&amp;&amp; (Amount__c &gt; Order__r.Amount_Owed__c)</errorConditionFormula>
    <errorMessage>Payment amount can not be greater than owed amount.</errorMessage>
</ValidationRule>