force-app/main/default/objects/Payments_TB__c/validationRules/Payment_can_not_be_more_than_owed2.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_can_not_be_more_than_owed2</fullName>
    <active>false</active>
    <description>This will allow you to edit the payment to a lesser value.  In the event a payment or waiver was not added up front.</description>
    <errorConditionFormula>Amount__c &gt;  PRIORVALUE(Amount__c)</errorConditionFormula>
    <errorMessage>Payment amount can not be greater than owed amount.</errorMessage>
</ValidationRule>