force-app/main/default/objects/Payments_TB__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Organization__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Order__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UPDATEDBY_USER</field>
        <operation>contains</operation>
        <value>noah</value>
    </filters>
    <label>All</label>
</ListView>